--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -94,6 +94,12 @@
     <script src="app/layouts/error/error.state.js"></script>
     <script src="app/home/home.state.js"></script>
     <script src="app/home/home.controller.js"></script>
+    <script src="app/entities/risk/risk-dialog.controller.js"></script>
+    <script src="app/entities/risk/risk-detail.controller.js"></script>
+    <script src="app/entities/risk/risk-delete-dialog.controller.js"></script>
+    <script src="app/entities/risk/risk.state.js"></script>
+    <script src="app/entities/risk/risk.service.js"></script>
+    <script src="app/entities/risk/risk.controller.js"></script>
     <script src="app/entities/entity.state.js"></script>
     <script src="app/components/util/truncate-words.filter.js"></script>
     <script src="app/components/util/truncate-characters.filter.js"></script>
