--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -19,6 +19,7 @@
     <!-- build:css content/css/main.css -->
     <link rel="stylesheet" href="content/css/main.css">
     <link rel="stylesheet" href="app/entities/company/company.css">
+    <link rel="stylesheet" href="app/entities/project/project.css">
     <!-- endbuild -->
 </head>
 <body ng-app="proyectoProcesosApp" ng-strict-di>
