--- a/src/main/webapp/app/entities/project/project-detail.html
+++ b/src/main/webapp/app/entities/project/project-detail.html
@@ -293,40 +293,40 @@
                                 </tr>
                                 <tr md-row>
                                     <th md-column style="background-color: #34495e; color: white; font-size: 14px; border: 1px solid white; border-left-color: transparent">Planned Value</th>
-                                    <td md-cell>$ {{vm.results.plannedValue | number}}</td>
+                                    <td md-cell><strong>$ {{vm.results.plannedValue | number}}</strong></td>
                                 </tr>
                                 <tr md-row>
                                     <th md-column style="background-color: #34495e; color: white; font-size: 14px; border: 1px solid white; border-left-color: transparent">Earned Value</th>
-                                    <td md-cell>$ {{vm.results.earnedValue | number}}</td>
+                                    <td md-cell><strong>$ {{vm.results.earnedValue | number}}</strong></td>
                                 </tr>
 
                                 <tr md-row>
                                     <th md-column style="background-color: #34495e; color: white; font-size: 14px; border: 1px solid white; border-left-color: transparent">Actual Cost</th>
-                                    <td md-cell>$ {{vm.results.actualCost | number}}</td>
+                                    <td md-cell><strong>$ {{vm.results.actualCost | number}}</strong></td>
                                 </tr>
 
                                 <tr md-row>
                                     <th md-column style="background-color: #34495e; color: white; font-size: 14px; border: 1px solid white; border-left-color: transparent">Schedule Variance</th>
-                                    <td md-cell>$ {{vm.results.scheduleVariance | number}}</td>
+                                    <td md-cell><strong>$ {{vm.results.scheduleVariance | number}}</strong></td>
                                 </tr>
 
                                 <tr md-row>
                                     <th md-column style="background-color: #34495e; color: white; font-size: 14px; border: 1px solid white; border-left-color: transparent">Cost Variance</th>
-                                    <td md-cell>{{vm.results.costVariance | number}}</td>
+                                    <td md-cell><strong>{{vm.results.costVariance | number}}</strong></td>
                                 </tr>
 
                                 <tr md-row>
                                     <th md-column style="background-color: #34495e; color: white; font-size: 14px; border: 1px solid white; border-left-color: transparent">SPI</th>
-                                    <td md-cell>{{vm.results.spi | number}}</td>
+                                    <td md-cell><strong>{{vm.results.spi | number}}</strong></td>
                                 </tr>
 
                                 <tr md-row>
                                     <th md-column style="background-color: #34495e; color: white; font-size: 14px; border: 1px solid white; border-left-color: transparent">CPI</th>
-                                    <td md-cell>{{vm.results.cpi | number}}</td>
+                                    <td md-cell><strong>{{vm.results.cpi | number}}</strong></td>
                                 </tr>
                                 <tr md-row>
                                     <th md-column style="background-color: #34495e; color: white; font-size: 14px; border: 1px solid white; border-left-color: transparent">EAC</th>
-                                    <td md-cell>$ {{vm.results.eac | number}}</td>
+                                    <td md-cell><strong>$ {{vm.results.eac | number}}</strong></td>
                                 </tr>
                                 </thead>
                             </table>
