--- a/src/main/webapp/app/entities/company/companies.html
+++ b/src/main/webapp/app/entities/company/companies.html
@@ -3,7 +3,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="header">
-                <h2 style="text-align: center" data-translate="proyectoProcesosApp.company.home.title">Companies</h2>
+                <h2 style="text-align: center">Compañias</h2>
                 <div class="no-padding-left" style="padding-right: 2em">
                     <md-button class="md-accent md-fab pull-right" ui-sref="company.new" style="margin-top: 2em">
                         <md-icon md-svg-src="/content/images/add.svg"></md-icon>
