--- a/src/main/webapp/app/entities/company/company-detail.html
+++ b/src/main/webapp/app/entities/company/company-detail.html
@@ -22,7 +22,7 @@
                    <div class="col-md-6">
                        <div class="row form-detail">
                            <div class="col-md-6">
-                               <dt><span>Name:</span></dt>
+                               <dt><span>Nombre:</span></dt>
                            </div>
                            <div class="col-md-6">
                                <span>{{vm.company.name}}</span>
@@ -30,7 +30,7 @@
                        </div>
                        <div class="row form-detail">
                            <div class="col-md-6">
-                               <dt><span>Description:</span></dt>
+                               <dt><span>Descripción:</span></dt>
                            </div>
                            <div class="col-md-6">
                                <span>{{vm.company.description}}</span>
@@ -38,7 +38,7 @@
                        </div>
                        <div class="row form-detail">
                            <div class="col-md-6">
-                               <dt><span>Telefono:</span></dt>
+                               <dt><span>Teléfono:</span></dt>
                            </div>
                            <div class="col-md-6">
                                <span>{{vm.company.telefono}}</span>
@@ -48,7 +48,7 @@
                    <div class="col-md-6">
                        <div class="row form-detail">
                            <div class="col-md-6">
-                               <dt><span>Email:</span></dt>
+                               <dt><span>Correo:</span></dt>
                            </div>
                            <div class="col-md-6">
                                <span>{{vm.company.email}}</span>
